Layout fixes
- Prevent sidebar toggle from causing layout issues
- Add bottom padding to certain layout situations

--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -239,6 +239,7 @@
 
 .cart-empty-message
   margin-top: $base-padding * 8
+  padding-bottom: $base-padding * 2
   text-align: center
 
 .cart-empty-header
@@ -264,3 +265,6 @@
   .page-heading .continue-shopping-link
     display: block
     margin-left: auto
+
+  .empty-cart-heading .continue-shopping-link
+    display: none
