--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -549,4 +549,5 @@ ul.sort-by-nav-links
   font-weight: bold
   margin-bottom: $base-padding * 4
   margin-top: $base-padding * 8
+  padding-bottom: $base-padding * 2
   text-align: center
